--- a/sass/components/_vocal.scss
+++ b/sass/components/_vocal.scss
@@ -100,6 +100,8 @@
 .flip-card__front, .flip-card__front-r {
     backface-visibility: hidden;
     -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    transform:rotateX(0);
     background: #e1b9aa;
     padding-top:3.5%;  
     padding-bottom:3.5%;
